<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_viewers"
            android:title="@string/menu_profile_viewers" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_likes_you"
            android:icon="@drawable/ic_star_likes_you"
            android:title="@string/menu_likes_you" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
